--- a/src/main/resources/templates/plan/edit.html
+++ b/src/main/resources/templates/plan/edit.html
@@ -80,30 +80,30 @@
 <!--                    <div th:if="${isCreateRoute}" class="addPlaces">-->
 <!--                        <th:block th:replace="~{fragment/modal :: placesToggle(placeNum)}"/>-->
 <!--                    </div>-->
-                    <!-- おすすめ目的地のセクション -->
-                    <section class="pt-10">
-                        <details open class="p-4 group overflow-hidden transition-[max-height] duration-500">
-                            <summary class="sm:text-xl text-lg cursor-pointer font-semibold marker:text-transparent group-open:before:rotate-90  before:origin-center relative before:w-[18px] before:h-[18px] before:transition-transform before:duration-200 before:-left-1 before:top-2/4 before:-translate-y-2/4 before:absolute before:bg-no-repeat before:bg-[length:18px_18px] before:bg-center before:bg-[url('data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20class%3D%22h-6%20w-6%22%20fill%3D%22none%22%20viewBox%3D%220%200%2024%2024%22%20stroke%3D%22currentColor%22%20stroke-width%3D%222%22%3E%0A%20%20%3Cpath%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%20d%3D%22M9%205l7%207-7%207%22%20%2F%3E%0A%3C%2Fsvg%3E')]">
-                                おすすめ目的地を追加
-                            </summary>
-                            <hr class="my-2 scale-x-150"/>
-                            <!-- おすすめ目的地のリストがない時 -->
-                            <!-- todo: おすすめ目的地の目的地作成Formリスト 仮:${recommendList} 空の時表示 -->
-                            <p id="recommendListDiv" class="sm:text-lg text-base text-danger my-4">
-<!--                            <p th:if="${#lists.isEmpty(recommendList)}" id="recommendListDiv" class="sm:text-lg text-base text-danger my-4">-->
-                                先に出発地点、終了地点、目的のどれかを入力してください。
-                            </p>
-                            <!-- ローディングの表示をおすすめ目的地取得の時に切り替える -->
-                            <div class="hidden items-center" id="loadingDiv">
-                                <span class="mx-2 text-lg">おすすめ目的地を検索中</span>
-                                <th:block th:replace="~{fragment/svg :: loading}"/>
-                            </div>
-                            <div id="recommendToggleDiv">
-                                <!-- todo: おすすめ目的地の 目的地作成リスト 仮:${recommendList} を使う -->
-<!--                                <th:block th:if="${!#lists.isEmpty(recommendList)}" th:insert="~{fragment/recommend :: recommendToggle(__${recommendList}__)}"/>-->
-                            </div>
-                        </details>
-                    </section>
+                    <!-- おすすめ目的地のセクション　一旦コメント化 -->
+<!--                    <section class="pt-10">-->
+<!--                        <details open class="p-4 group overflow-hidden transition-[max-height] duration-500">-->
+<!--                            <summary class="sm:text-xl text-lg cursor-pointer font-semibold marker:text-transparent group-open:before:rotate-90  before:origin-center relative before:w-[18px] before:h-[18px] before:transition-transform before:duration-200 before:-left-1 before:top-2/4 before:-translate-y-2/4 before:absolute before:bg-no-repeat before:bg-[length:18px_18px] before:bg-center before:bg-[url('data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20class%3D%22h-6%20w-6%22%20fill%3D%22none%22%20viewBox%3D%220%200%2024%2024%22%20stroke%3D%22currentColor%22%20stroke-width%3D%222%22%3E%0A%20%20%3Cpath%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%20d%3D%22M9%205l7%207-7%207%22%20%2F%3E%0A%3C%2Fsvg%3E')]">-->
+<!--                                おすすめ目的地を追加-->
+<!--                            </summary>-->
+<!--                            <hr class="my-2 scale-x-150"/>-->
+<!--                            &lt;!&ndash; おすすめ目的地のリストがない時 &ndash;&gt;-->
+<!--                            &lt;!&ndash; おすすめ目的地の目的地作成Formリスト 仮:${recommendList} 空の時表示 &ndash;&gt;-->
+<!--                            <p id="recommendListDiv" class="sm:text-lg text-base text-danger my-4">-->
+<!--&lt;!&ndash;                            <p th:if="${#lists.isEmpty(recommendList)}" id="recommendListDiv" class="sm:text-lg text-base text-danger my-4">&ndash;&gt;-->
+<!--                                先に出発地点、終了地点、目的のどれかを入力してください。-->
+<!--                            </p>-->
+<!--                            &lt;!&ndash; ローディングの表示をおすすめ目的地取得の時に切り替える &ndash;&gt;-->
+<!--                            <div class="hidden items-center" id="loadingDiv">-->
+<!--                                <span class="mx-2 text-lg">おすすめ目的地を検索中</span>-->
+<!--                                <th:block th:replace="~{fragment/svg :: loading}"/>-->
+<!--                            </div>-->
+<!--                            <div id="recommendToggleDiv">-->
+<!--                                &lt;!&ndash; おすすめ目的地の 目的地作成リスト 仮:${recommendList} を使う &ndash;&gt;-->
+<!--&lt;!&ndash;                                <th:block th:if="${!#lists.isEmpty(recommendList)}" th:insert="~{fragment/recommend :: recommendToggle(__${recommendList}__)}"/>&ndash;&gt;-->
+<!--                            </div>-->
+<!--                        </details>-->
+<!--                    </section>-->
                     <!-- 利用する交通手段のセクション -->
                     <section class="pt-10 sm:text-lg text-base -m-4 -mt-2 p-4 flex flex-col">
                         利用する交通手段
