利用する交通手段をradioボタンにし、公共交通機関を削除

--- a/src/main/resources/templates/fragment/script.html
+++ b/src/main/resources/templates/fragment/script.html
@@ -59,8 +59,8 @@
     <script src="/js/modal.js"></script>
 </th:block>
 
-<th:block th:fragment="svgCheckbox">
-    <script src="/js/svgCheckbox.js"></script>
+<th:block th:fragment="svgThreeRadio">
+    <script src="/js/svgThreeRadio.js"></script>
 </th:block>
 
 <th:block th:fragment="svgRadioButton">
